    and custom D-Mod keys) on Windows.

  - FreeDinkedit now uses layout-independent scancodes - no longer
    searching where '[' or '`' was relocated.

  - CD-ROM support dropped.

- Debug mode is toggled once when Alt+D is pressed (no more fighting
  with continous toggling).

- DinkC console is toggled when Alt-C is pressed (no more creating a
  key-xx.c with just "show_console()" inside).

- New translation for the engine strings in Russian
  (thanks Yuri Kozlov)

- New translation for the engine strings in Hungarian
  (thanks Balázs Úr)

- DinkC: load_palette() now searches for palette in the right place
  (thanks scratcher for the report)

- DinkC: Dink position is updated after a new screen is loaded
  (thanks metatarasal for the report)


108.2
=====

* User-visible changes:

- New, simple versioning scheme, without scary .20YYMMDD date.

- Properly play Dink's intro screen music (see below).

- FreeDinkedit plays sounds on Windows.

- New translation for the engine strings in Brazilian Portuguese
  (thanks Enrico Nicoletto)

- Update translations of the engine strings
  (thanks Translation Project)

- 64-bit support for Windows.

* Developer notes:

- Properly play Dink's intro screen music: the original game actually
  tries both 3.mid and 1003.mid for playmidi("1003.mid").

- Improved build documentation.

- Display SDL audio driver in debug mode.

- Add AppStream/AppData file for GNU/Linux software centers.


1.08.20121209
=============

* User-visible changes:

- Fix game freeze when warping in some special situations, such as
  when lots of sprites are created; this bug was present in the
  original Dink (thanks Bas Wijnen)

- New translation for the engine strings in Catalan (thanks Àngel
  Mompó) and Basque (thanks Gorka Azkarate Zubiaur)

- Update translations of the engine strings (thanks Translation
  Project), including the Dutch translation which was never credited
  in this file yet (thanks Koen Torfs)


1.08.20120427
=============
